--- a/struct/struct.vcxproj.filters
+++ b/struct/struct.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="2 i 3.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="4.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
