--- a/struct/struct.vcxproj
+++ b/struct/struct.vcxproj
@@ -144,6 +144,8 @@
     <ClCompile Include="4(drugi nacin).c" />
     <ClCompile Include="4.c" />
     <ClCompile Include="5.c" />
+    <ClCompile Include="6,a.c" />
+    <ClCompile Include="6,b.c" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="lista.txt" />
