--- a/struct/struct.vcxproj.filters
+++ b/struct/struct.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="7.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="8.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="lista.txt">
