--- a/struct/struct.vcxproj.filters
+++ b/struct/struct.vcxproj.filters
@@ -45,12 +45,18 @@
     <ClCompile Include="9.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="10.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="lista.txt">
       <Filter>Source Files</Filter>
     </Text>
     <Text Include="postfix.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+    <Text Include="infix.txt">
       <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
