--- a/struct/struct.vcxproj.filters
+++ b/struct/struct.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="10.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="11.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="lista.txt">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </Text>
     <Text Include="infix.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+    <Text Include="zad11.txt">
       <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
